# airbyte-source-point

./: .env.example  .gitignore  CHANGELOG.md  DEBUG_FIX_SUMMARY.md  DEPLOYMENT_GUIDE.md  Dockerfile  GITHUB_DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LOCAL_DEPLOYMENT_GUIDE.md  MYSQL_FIX_SUMMARY.md  MYSQL_SYNC_FIX_SUMMARY.md  PROJECT_SUMMARY.md  QA_VALIDATION_CHECKLIST.md  README.md  acceptance-test-config.yml  metadata.yaml  plan.md  pyproject.toml  standalone_connector.py  test_basic_functionality.py  test_config.json  test_data_conversion.py  test_mysql_comprehensive.py  test_mysql_fix.py  test_mysql_injection.py  test_next_page_token.py
.github/workflows/: build-and-push.yml
docs/integrations/sources/: point.md
integration_tests/: configured_catalog.json  sample_config.json  test_integration.py
source_point/: __init__.py  run.py  source.py  streams.py
source_point/schemas/: point_data.json
unit_tests/: test_source.py  test_streams.py
